Fri Dec  4 13:53:05 CET 2015
	Releasing libmicrohttpd 0.9.47. -CG

Thu Dec  3 18:21:44 CET 2015
	Reworked VS project files. Used x64 build tools by 
	default, many optimizations, fixes.
	Added project files for VS 2015. -EG

Tue Dec  1 14:05:13 CET 2015
	SPDY is dead, killing experimental libmicrospdy. -CG

Tue Dec  1 10:01:12 CET 2015
	New logic for controlling socket buffer modes.
	Eliminated delay before last packet in response and before
	"100 Continue" response on all platforms. Also response
	header are pushed to client without waiting for response
	body. -EG

Wed Nov 25 17:02:53 CET 2015
	Remove 200ms delay observable with keep-alive on Darwin
	and *BSD platfroms. -EG

Tue Nov 10 15:25:48 CET 2015
	Fix issue with shutdown if connection was resumed just
	before shutdown. -FC

Fri Nov  6 22:54:38 CET 2015
	Fixing the buffer shrinkage issue, this time with test. -CG
	Releasing libmicrohttpd 0.9.46. -CG

Tue Nov  3 23:24:52 CET 2015
	Undoing change from Sun Oct 25 15:29:23 CET 2015
	as the original code was counter-intuitive but
	correct, and the new code does break pipelining.
	Ignore empty lines at the beginning of an HTTP
	request (more tolerant implementation). -CG

Sat Oct 31 15:52:52 CET 2015
	Releasing libmicrohttpd 0.9.45. -CG

Tue Oct 27 12:08:02 CET 2015
	Rework deprecation maros: fix errors with old GCC versions,
	improved support for old clang and new GCC. -EG

Sun Oct 25 23:05:32 CET 2015
	Return correct header kind in MHD_get_connection_values()
	even if a bitmask is used for the "kind" argument. -FC/CG

Sun Oct 25 15:29:23 CET 2015
	Fixing transient resource leak affecting long-lived
	connections with many keep-alives and HTTP request
	pipelining under certain circumstances (which reduced
	the receive window).
	Fixed assertion failure triggered by a race in
	thread-per-connection mode on shutdown in rare
	circumstances. -CG

Mon Oct  5 11:53:52 CEST 2015
	Deduplicate code between digestauth and connection